--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,19 @@
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 400;
-    color-scheme: light dark;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
+    background-color: white;
+    color: black
+}
+
+@media screen and (max-width: 400px) {
+    *,
+    *::before,
+    *::after {
+        box-sizing: content-box!important;
+    }
 }
